# july

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  demo.jy  july.j  july.jy  july.vim  out  pebble.vim
.github/workflows/: ci.yml
core/: basic.peb  ffi.peb  float.peb  intrinsics.peb  io.peb  string.peb
demo/: SDL3  demo.jy  import.peb  intrinsics.peb  invaders.jy  invaders.peb  math.jy  sandbox.jy  simple.jy  tests.jy  tests.peb
demo/invaders/: invaders.peb
july-fmt/: Cargo.toml
july-fmt/res/: tests_unformatted.jy
july-fmt/src/: fmt.rs  fmt_tests.rs  main.rs  node.rs
julyc/: Cargo.toml
julyc-arena/: Cargo.toml
julyc-parse/: Cargo.toml
julyc-parse/src/: diagnostic.rs  lib.rs  matc.rs
julyc-parse/src/combinator/: mod.rs  spanned.rs
julyc-parse/src/lex/: buffer.rs  kind.rs  mod.rs  source.rs
julyc-parse/src/rules/: arr.rs  attributes.rs  block.rs  enom.rs  expr.rs  func.rs  impul.rs  konst.rs  stmt.rs  strukt.rs  types.rs
julyc/benches/: invaders.rs
julyc/src/: arena.rs  comp.rs  lib.rs  main.rs
julyc/src/air/: bin.rs  ctx.rs  data.rs  mod.rs
julyc/src/ir/: ctx.rs  enom.rs  ident.rs  lit.rs  mod.rs  resolve.rs  sem.rs  sig.rs  strukt.rs
julyc/src/ir/ty/: infer.rs  mod.rs  store.rs
pebble-fmt/: Cargo.toml  build.rs
pebble-fmt/res/: invaders_unformatted.peb  tests_unformatted.peb
pebble-fmt/src/: fmt.rs  fmt_tests.rs  lib.rs  main.rs  node.rs  tests.rs
pebble-fmt/tests/: hosted.rs  invaders_unformatted.peb  tests.rs
pebblec/: Cargo.toml  build.rs
pebblec-arena/: Cargo.toml
pebblec-arena/src/: lib.rs
pebblec-macros/: Cargo.toml
pebblec-macros/src/: lib.rs
pebblec-parse/: Cargo.toml
pebblec-parse/src/: diagnostic.rs  lib.rs  matc.rs  stream.rs  sym.rs  token_structs.rs
pebblec-parse/src/combinator/: alt.rs  opt.rs  spanned.rs  wile.rs
pebblec-parse/src/lex/: buffer.rs  kind.rs  mod.rs  source.rs
pebblec-parse/src/rules/: arr.rs  attributes.rs  block.rs  enom.rs  expr.rs  func.rs  impul.rs  konst.rs  mod.rs  stmt.rs  strukt.rs  types.rs  (+1 more)
pebblec/benches/: invaders.rs
pebblec/src/: comp.rs  ice.rs  lib.rs  main.rs  pebblec_tests.rs  tests.rs
pebblec/src/air/: bin.rs  ctx.rs  data.rs  mod.rs
pebblec/src/interp/: ctx.rs  mod.rs  stack.rs
pebblec/src/ir/: ctx.rs  enom.rs  ident.rs  lit.rs  mem.rs  mod.rs  resolve.rs  sem.rs  sig.rs  strukt.rs
pebblec/src/ir/ty/: infer.rs  mod.rs  store.rs
pebblec/tests/: tests.rs
pebblec/tests/hosted/: cast.peb  general.peb  methods.peb  mod.rs  slice.peb
src/: arena.rs  diagnostic.rs  main.rs  source.rs
src/air/: bin.rs  ctx.rs  data.rs  mod.rs
src/codegen/: ctx.rs  mod.rs  var.rs
src/interp/: ctx.rs  mod.rs  stack.rs
src/ir/: block.rs  ctx.rs  enom.rs  expr.rs  func.rs  ident.rs  lit.rs  mem.rs  mod.rs  resolve.rs  sem.rs  sig.rs  stmt.rs  strukt.rs  ty.rs
src/lex/: buffer.rs  kind.rs  mod.rs
src/parse/: instr.rs  matc.rs  mod.rs  rule.rs  stream.rs
src/recon/: constraint.rs  mod.rs
src/unit/: comp.rs  io.rs  mod.rs
(+24 files in other folders)
