[package]
name = "july"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.11.5"
anstream = "0.6.18"
bincode = "1.3.3"
cranelift-codegen = "0.116.1"
cranelift-frontend = "0.116.1"
cranelift-module = "0.116.1"
cranelift-native = "0.116.1"
cranelift-object = "0.116.1"
serde = {version = "1.0.217", features = ["derive"]}
target-lexicon = "0.13.1"
variadics_please = "1.1.0"
winnow = "0.6.24"
