[package]
name = "july"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = "0.11.5"
anstream = "0.6.18"
clap = { version = "4.5.31", features = ["derive"] }
cranelift-codegen = "0.116.1"
cranelift-frontend = "0.116.1"
cranelift-module = "0.116.1"
cranelift-native = "0.116.1"
cranelift-object = "0.116.1"
libc = "0.2.170"
libffi = "3.2.0"
libloading = "0.8.6"
serde = {version = "1.0.217", features = ["derive"]}
variadics_please = "1.1.0"
winnow = "0.6.24"
