[package]
name = "julyc"
version = "0.1.0"
edition = "2024"

[lib]
name = "julyc"
path = "src/lib.rs"

[[bin]]
name = "julyc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
libc = "0.2.170"
libffi = "3.2.0"
libloading = "0.8.6"
julyc-parse = { path = "../julyc-parse" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "invaders"
harness = false
