[package]
name = "pebble-fmt"
version = "0.1.0"
edition = "2024"

[lib]
name = "pebble_fmt"
path = "src/lib.rs"

[[bin]]
name = "pebble_fmt"
path = "src/main.rs"

[dependencies]
pebblec-parse = { path = "../pebblec-parse" }
pebblec-arena = { path = "../pebblec-arena" }
clap = { version = "4.5.31", features = ["derive"] }

[dev-dependencies]
pebblec = { path = "../pebblec" }

[build-dependencies]
prettyplease = "0.2.31"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
walkdir = "2.5.0"
