[package]
name = "pebblec"
version = "0.1.0"
edition = "2024"

[lib]
name = "pebblec"
path = "src/lib.rs"

[[bin]]
name = "pebblec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
libc = "0.2.170"
libffi = "3.2.0"
libloading = "0.8.6"
pebblec-parse = { path = "../pebblec-parse" }
pebblec-arena = { path = "../pebblec-arena" }
indexmap = "2.8.0"
deterministic-hash = "1.0.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "invaders"
harness = false
